kubernets/api/deploymentset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-api
  template:
    metadata:
      labels:
        app: chat-api
    spec:
      containers:
      - name: chat-api-container
        image: real-time-chat:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
